fix p-table special approve word-wrap

--- a/temple-fontend/src/styles.css
+++ b/temple-fontend/src/styles.css
@@ -138,3 +138,7 @@ body .ui-button.ui-state-default.ui-button-warning, body .ui-buttonset.ui-button
 
 
 }
+.word-wrap{
+    word-wrap: break-word;
+
+}
